--- a/IdentityManagerTutorial/appsettings.json
+++ b/IdentityManagerTutorial/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=IdentityTuturialDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
   "AllowedHosts": "*"
 }
